# hs_bot

./: .gitignore  CMakeLists.txt
src/: AnnealingBot.h  Board.cpp  Board.h  Bot.h  CMakeLists.txt  InputParser.h  Mechanics.cpp  Mechanics.h  OnlineMedian.h  Position.cpp  Position.h  main.cpp
test/: CMakeLists.txt  annealing_bot_test.cpp  board_test.cpp  bot_test.cpp  input_parser_test.cpp  mechanics_test.cpp
